fixed card title overflow issue for mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,11 @@ Nav {
  font-size: 1.75vw
 }
 
+.card{
+  max-height: 215px;
+  overflow: hidden;
+}
+
 .sidebar-header svg {
   font-size: 1.5vw
 }
